fixing main container on mobile

--- a/styles.css
+++ b/styles.css
@@ -115,6 +115,9 @@ body {
   html {
     width: 175%;
   }
+  .main {
+    width: 95%;
+  }
   .domains-container {
     width: 98% !important;
   }
